argocd/manifests/calibre-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app: calibre-web
spec:
  type: ClusterIP
  selector:
    app: calibre-web
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
